--- a/plugins/lgdis/config/custom_field_connection.yml.example
+++ b/plugins/lgdis/config/custom_field_connection.yml.example
@@ -1,4 +1,4 @@
-# カスタムフィールド(地域情報)の連動設定
+# カスタムフィールド(地域情報連動機能)の設定
 # * すべて「リストから選択」であること
 # * 下記書式で「大分類」「中分類」「小分類」をカスタムフィールドIDを記載すること
 #
@@ -8,8 +8,8 @@ custom_field_connection:
     - 1004
     - 1005
 
-# カスタムフィールド(地域情報)の連動設定
-# * すべて「リストから選択」であること
+# カスタムフィールド(マップ入力機能)の設定
+# * すべて「テキスト」であること
 # * 下記書式で「大分類」「中分類」「小分類」「住所」のカスタムフィールドIDを記載すること
 #
 custom_field_address:
