--- a/plugins/lgdis/config/destination_list.yml
+++ b/plugins/lgdis/config/destination_list.yml
@@ -352,12 +352,14 @@ test_prj:
  # where COMMONS web server process is running on.
  # In other word, IP address of non-router (including virtualizer router).
 #ie commons_endpoint: http://192.168.43.186/commons/subscriber/soap/testservice.example.com/
-# sha
-commons_endpoint: http://192.168.11.7/commons/subscriber/soap/testservice.example.com/
+#sha commons_endpoint: http://192.168.11.7/commons/subscriber/soap/testservice.example.com/
+#sha centos_ssh:
+commons_endpoint: https://localhost:443/commons/subscriber/soap/testservice.example.com/
 commons_user: user1@example.com
 commons_pw: password
 commons_wsdl: /opt/fix/LGDIS/plugins/lgdis/lib/lgdis/ext_out/wsdl/MQService.wsdl
 commons_namespace: http://soap.publiccommons.ne.jp/
+commons_ssl_ca_cert: /opt/fix/SOAPdev/etc/pki/CA/cacert.pem
 
 
 # 災害情報ポータルURL
