配信管理 設定ファイルを再修正

--- a/plugins/lgdis/config/destination_list.yml
+++ b/plugins/lgdis/config/destination_list.yml
@@ -10,52 +10,48 @@
 commons: &commons
   target_num: 1
   name: 公共情報コモンズ
-smtp_auth: &smtp
+smtp_0: &smtp_0
   target_num: 2
-  name: 自治体職員向けメール
-smtp: &smtp_part0
-  target_num: 3
   name: 自治体職員向けメール（０号配備）
-smtp: &smtp_part1
-  target_num: 4
+smtp_1: &smtp_1
+  target_num: 3
   name: 自治体職員向けメール（１号配備）
-smtp: &smtp_part2
-  target_num: 5
+smtp_2: &smtp_2
+  target_num: 4
   name: 自治体職員向けメール（２号配備）
-smtp: &smtp_part3
-  target_num: 6
+smtp_3: &smtp_3
+  target_num: 5
   name: 自治体職員向けメール（３号配備）
-smtp: &smtp_auth
-  target_num: 7
+smtp_auth: &smtp_auth
+  target_num: 6
   name: まちcomi向けメール
 twitter: &twitter
-  target_num: 8
+  target_num: 7
   name: Twitter
 facebook: &facebook
-  target_num: 9
+  target_num: 8
   name: Facebook
 atom: &atom
-  target_num: 10
+  target_num: 9
   name: 災害情報ポータル
-urgent_mail: &urgent_mail_docomo
-  target_num: 11
+urgent_mail_docomo: &urgent_mail_docomo
+  target_num: 10
   name: 緊急速報メール（NTTDocomo）
-urgent_mail: &urgent_mail_au
-  target_num: 12
+urgent_mail_au: &urgent_mail_au
+  target_num: 11
   name: 緊急速報メール（KDDI）
-urgent_mail: &urgent_mail_sb
-  target_num: 13
+urgent_mail_sb: &urgent_mail_sb
+  target_num: 12
   name: 緊急速報メール（ソフトバンク）
 
 destination:
   1: # Non member
     1: # 避難勧告指示・指示情報(公共コモンズ配信用)
       - <<: *commons
-      - <<: *smtp
-      - <<: *smtp_part0
-      - <<: *smtp_part1
-      - <<: *smtp_part2
-      - <<: *smtp_part3
+      - <<: *smtp_0
+      - <<: *smtp_1
+      - <<: *smtp_2
+      - <<: *smtp_3
       - <<: *smtp_auth
       - <<: *twitter
       - <<: *facebook
@@ -65,11 +61,10 @@ destination:
       - <<: *urgent_mail_sb
     4: # JMA（警報・注意報）
       - <<: *commons
-      - <<: *smtp
-      - <<: *smtp_part0
-      - <<: *smtp_part1
-      - <<: *smtp_part2
-      - <<: *smtp_part3
+      - <<: *smtp_0
+      - <<: *smtp_1
+      - <<: *smtp_2
+      - <<: *smtp_3
       - <<: *smtp_auth
       - <<: *twitter
       - <<: *facebook
@@ -80,11 +75,10 @@ destination:
   2: # Anonymous
     1: # 避難勧告指示・指示情報(公共コモンズ配信用)
       - <<: *commons
-      - <<: *smtp
-      - <<: *smtp_part0
-      - <<: *smtp_part1
-      - <<: *smtp_part2
-      - <<: *smtp_part3
+      - <<: *smtp_0
+      - <<: *smtp_1
+      - <<: *smtp_2
+      - <<: *smtp_3
       - <<: *smtp_auth
       - <<: *twitter
       - <<: *facebook
@@ -94,11 +88,10 @@ destination:
       - <<: *urgent_mail_sb
     4: # JMA（警報・注意報）
       - <<: *commons
-      - <<: *smtp
-      - <<: *smtp_part0
-      - <<: *smtp_part1
-      - <<: *smtp_part2
-      - <<: *smtp_part3
+      - <<: *smtp_0
+      - <<: *smtp_1
+      - <<: *smtp_2
+      - <<: *smtp_3
       - <<: *smtp_auth
       - <<: *twitter
       - <<: *facebook
@@ -109,11 +102,10 @@ destination:
   3: # 管理者(プロトタイプ環境 admin)
     1: # 避難勧告指示・指示情報(公共コモンズ配信用)
       - <<: *commons
-      - <<: *smtp
-      - <<: *smtp_part0
-      - <<: *smtp_part1
-      - <<: *smtp_part2
-      - <<: *smtp_part3
+      - <<: *smtp_0
+      - <<: *smtp_1
+      - <<: *smtp_2
+      - <<: *smtp_3
       - <<: *smtp_auth
       - <<: *twitter
       - <<: *facebook
@@ -123,11 +115,10 @@ destination:
       - <<: *urgent_mail_sb
     4: # 気象情報（警報・注意報）
       - <<: *commons
-      - <<: *smtp
-      - <<: *smtp_part0
-      - <<: *smtp_part1
-      - <<: *smtp_part2
-      - <<: *smtp_part3
+      - <<: *smtp_0
+      - <<: *smtp_1
+      - <<: *smtp_2
+      - <<: *smtp_3
       - <<: *smtp_auth
       - <<: *twitter
       - <<: *facebook
@@ -138,11 +129,10 @@ destination:
   6: # モデレータ
     1: # 避難勧告指示・指示情報(公共コモンズ配信用)
       - <<: *commons
-      - <<: *smtp
-      - <<: *smtp_part0
-      - <<: *smtp_part1
-      - <<: *smtp_part2
-      - <<: *smtp_part3
+      - <<: *smtp_0
+      - <<: *smtp_1
+      - <<: *smtp_2
+      - <<: *smtp_3
       - <<: *smtp_auth
       - <<: *twitter
       - <<: *facebook
@@ -152,11 +142,10 @@ destination:
       - <<: *urgent_mail_sb
     4: # JMA（警報・注意報）
       - <<: *commons
-      - <<: *smtp
-      - <<: *smtp_part0
-      - <<: *smtp_part1
-      - <<: *smtp_part2
-      - <<: *smtp_part3
+      - <<: *smtp_0
+      - <<: *smtp_1
+      - <<: *smtp_2
+      - <<: *smtp_3
       - <<: *smtp_auth
       - <<: *twitter
       - <<: *facebook
@@ -167,11 +156,10 @@ destination:
   7: # エリアマネージャ
     1: # 避難勧告指示・指示情報(公共コモンズ配信用)
       - <<: *commons
-      - <<: *smtp
-      - <<: *smtp_part0
-      - <<: *smtp_part1
-      - <<: *smtp_part2
-      - <<: *smtp_part3
+      - <<: *smtp_0
+      - <<: *smtp_1
+      - <<: *smtp_2
+      - <<: *smtp_3
       - <<: *smtp_auth
       - <<: *twitter
       - <<: *facebook
@@ -181,11 +169,10 @@ destination:
       - <<: *urgent_mail_sb
     4: # JMA（警報・注意報）
       - <<: *commons
-      - <<: *smtp
-      - <<: *smtp_part0
-      - <<: *smtp_part1
-      - <<: *smtp_part2
-      - <<: *smtp_part3
+      - <<: *smtp_0
+      - <<: *smtp_1
+      - <<: *smtp_2
+      - <<: *smtp_3
       - <<: *smtp_auth
       - <<: *twitter
       - <<: *facebook
@@ -196,11 +183,10 @@ destination:
   8: # 市役所内一般入力者
     1: # 避難勧告指示・指示情報(公共コモンズ配信用)
       - <<: *commons
-      - <<: *smtp
-      - <<: *smtp_part0
-      - <<: *smtp_part1
-      - <<: *smtp_part2
-      - <<: *smtp_part3
+      - <<: *smtp_0
+      - <<: *smtp_1
+      - <<: *smtp_2
+      - <<: *smtp_3
       - <<: *smtp_auth
       - <<: *twitter
       - <<: *facebook
@@ -210,11 +196,10 @@ destination:
       - <<: *urgent_mail_sb
     4: # JMA（警報・注意報）
       - <<: *commons
-      - <<: *smtp
-      - <<: *smtp_part0
-      - <<: *smtp_part1
-      - <<: *smtp_part2
-      - <<: *smtp_part3
+      - <<: *smtp_0
+      - <<: *smtp_1
+      - <<: *smtp_2
+      - <<: *smtp_3
       - <<: *smtp_auth
       - <<: *twitter
       - <<: *facebook
@@ -225,11 +210,10 @@ destination:
   9: # 外部入力者
     1: # 避難勧告指示・指示情報(公共コモンズ配信用)
       - <<: *commons
-      - <<: *smtp
-      - <<: *smtp_part0
-      - <<: *smtp_part1
-      - <<: *smtp_part2
-      - <<: *smtp_part3
+      - <<: *smtp_0
+      - <<: *smtp_1
+      - <<: *smtp_2
+      - <<: *smtp_3
       - <<: *smtp_auth
       - <<: *twitter
       - <<: *facebook
@@ -239,11 +223,10 @@ destination:
       - <<: *urgent_mail_sb
     4: # JMA（警報・注意報）
       - <<: *commons
-      - <<: *smtp
-      - <<: *smtp_part0
-      - <<: *smtp_part1
-      - <<: *smtp_part2
-      - <<: *smtp_part3
+      - <<: *smtp_0
+      - <<: *smtp_1
+      - <<: *smtp_2
+      - <<: *smtp_3
       - <<: *smtp_auth
       - <<: *twitter
       - <<: *facebook
@@ -254,11 +237,10 @@ destination:
   10: # 閲覧者
     1: # 避難勧告指示・指示情報(公共コモンズ配信用)
       - <<: *commons
-      - <<: *smtp
-      - <<: *smtp_part0
-      - <<: *smtp_part1
-      - <<: *smtp_part2
-      - <<: *smtp_part3
+      - <<: *smtp_0
+      - <<: *smtp_1
+      - <<: *smtp_2
+      - <<: *smtp_3
       - <<: *smtp_auth
       - <<: *twitter
       - <<: *facebook
@@ -268,11 +250,10 @@ destination:
       - <<: *urgent_mail_sb
     4: # JMA（警報・注意報）
       - <<: *commons
-      - <<: *smtp
-      - <<: *smtp_part0
-      - <<: *smtp_part1
-      - <<: *smtp_part2
-      - <<: *smtp_part3
+      - <<: *smtp_0
+      - <<: *smtp_1
+      - <<: *smtp_2
+      - <<: *smtp_3
       - <<: *smtp_auth
       - <<: *twitter
       - <<: *facebook
@@ -287,29 +268,27 @@ delivery_job_map:
   3: SmtpJichiShokuinRequestJob
   4: SmtpJichiShokuinRequestJob
   5: SmtpJichiShokuinRequestJob
-  6: SmtpJichiShokuinRequestJob
-  7: SmtpAuthRequestJob
-  8: TwitterRequestJob
-  9: FacebookRequestJob
-  10: AtomDigiSignageRequestJob
+  6: SmtpAuthRequestJob
+  7: TwitterRequestJob
+  8: FacebookRequestJob
+  9: AtomDigiSignageRequestJob
+  10: SoapKjCommonsRequestJob
   11: SoapKjCommonsRequestJob
   12: SoapKjCommonsRequestJob
-  13: SoapKjCommonsRequestJob
 
 destination_name:
   1: 公共情報コモンズ
-  2: 自治体職員向けメール
-  3: 自治体職員向けメール（０号配備）
-  4: 自治体職員向けメール（１号配備）
-  5: 自治体職員向けメール（２号配備）
-  6: 自治体職員向けメール（３号配備）
-  7: まちcomi向けメール
-  8: Twitter
-  9: Facebook
-  10: 災害情報ポータル
-  11: 緊急速報メール（NTTDocomo）
-  12: 緊急速報メール（KDDI）
-  13: 緊急速報メール（ソフトバンク）
+  2: 自治体職員向けメール（０号配備）
+  3: 自治体職員向けメール（１号配備）
+  4: 自治体職員向けメール（２号配備）
+  5: 自治体職員向けメール（３号配備）
+  6: まちcomi向けメール
+  7: Twitter
+  8: Facebook
+  9: 災害情報ポータル
+  10: 緊急速報メール（NTTDocomo）
+  11: 緊急速報メール（KDDI）
+  12: 緊急速報メール（ソフトバンク）
 
 create_msg_msd:
   1: create_commons_msg
@@ -318,13 +297,12 @@ create_msg_msd:
   4: create_smtp_msg
   5: create_smtp_msg
   6: create_smtp_msg
-  7: create_smtp_msg
-  8: create_twitter_msg
-  9: create_facebook_msg
-  10: create_atom_msg
+  7: create_twitter_msg
+  8: create_facebook_msg
+  9: create_atom_msg
+  10: create_commons_msg
   11: create_commons_msg
   12: create_commons_msg
-  13: create_commons_msg
 
 commons_xml:
   0: commons_urgent_mail.xml                     # 緊急速報メール
