--- a/plugins/lgdis/config/destination_list.yml
+++ b/plugins/lgdis/config/destination_list.yml
@@ -1,3 +1,99 @@
+delivery_place:
+  &commons_id 1: &commons
+    id: *commons_id
+    name: 公共情報コモンズ
+    create_msg_method: create_commons_msg
+    delivery_job_class: SoapKjCommonsRequestJob
+    add_url_type: disaster_portal
+  &smtp_0_id 2: &smtp_0
+    id: *smtp_0_id
+    name: 自治体職員向けメール（０号配備）
+    create_msg_method: create_smtp_msg
+    delivery_job_class: SmtpJichiShokuinRequestJob
+    to: root@localhost.localdomain
+    add_url_type: lgdsf
+  &smtp_1_id 3: &smtp_1
+    id: *smtp_1_id
+    name: 自治体職員向けメール（１号配備）
+    create_msg_method: create_smtp_msg
+    delivery_job_class: SmtpJichiShokuinRequestJob
+    to: apl@localhost.localdomain
+    add_url_type: lgdsf
+  &smtp_2_id 4: &smtp_2
+    id: *smtp_2_id
+    name: 自治体職員向けメール（２号配備）
+    create_msg_method: create_smtp_msg
+    delivery_job_class: SmtpJichiShokuinRequestJob
+    to: root@localhost.localdomain
+    add_url_type: lgdsf
+  &smtp_3_id 5: &smtp_3
+    id: *smtp_3_id
+    name: 自治体職員向けメール（３号配備）
+    create_msg_method: create_smtp_msg
+    delivery_job_class: SmtpJichiShokuinRequestJob
+    to: root@localhost.localdomain
+    add_url_type: lgdsf
+  &smtp_auth_id 6: &smtp_auth
+    id: *smtp_auth_id
+    name: まちcomi向けメール
+    create_msg_method: create_smtp_msg
+    delivery_job_class: SmtpAuthRequestJob
+    to: root@localhost.localdomain
+    add_url_type: disaster_portal
+  &twitter_id 7: &twitter
+    id: *twitter_id
+    name: Twitter
+    create_msg_method: create_twitter_msg
+    delivery_job_class: TwitterRequestJob
+    add_url_type: disaster_portal
+  &facebook_id 8: &facebook
+    id: *facebook_id
+    name: Facebook
+    create_msg_method: create_facebook_msg
+    delivery_job_class: FacebookRequestJob
+    add_url_type: disaster_portal
+  &atom_id 9: &atom
+    id: *atom_id
+    name: 災害情報ポータル
+    create_msg_method: create_atom_msg
+    delivery_job_class: AtomDigiSignageRequestJob
+    add_url_type: disaster_portal
+  &urgent_mail_docomo_id 10: &urgent_mail_docomo
+    id: *urgent_mail_docomo_id
+    name: 緊急速報メール（NTTDocomo）
+    create_msg_method: create_commons_msg
+    delivery_job_class: SoapKjCommonsRequestJob
+    add_url_type: disaster_portal
+  &urgent_mail_au_id 11: &urgent_mail_au
+    id: *urgent_mail_au_id
+    name: 緊急速報メール（KDDI）
+    create_msg_method: create_commons_msg
+    delivery_job_class: SoapKjCommonsRequestJob
+    add_url_type: disaster_portal
+  &urgent_mail_sb_id 12: &urgent_mail_sb
+    id: *urgent_mail_sb_id
+    name: 緊急速報メール（ソフトバンク）
+    create_msg_method: create_commons_msg
+    delivery_job_class: SoapKjCommonsRequestJob
+    add_url_type: disaster_portal
+
+# 記載例
+# auto_destination:
+#   *号配備番号:
+#     - 配信先1
+#     - 配信先2
+#     - 配信先3
+#     - 配信先4
+auto_destination:
+  0:  # ０号配備
+    - *smtp_0
+  1:  # １号配備
+    - *smtp_1
+  2:  # ２号配備
+    - *smtp_2
+  3:  # ３号配備
+    - *smtp_3
+
 # 記載例
 # destination:
 #   role_id:
@@ -6,303 +102,223 @@
 #       - 配信先2
 #       - 配信先3
 #       - 配信先4
-
-commons: &commons
-  target_num: 1
-  name: 公共情報コモンズ
-smtp_0: &smtp_0
-  target_num: 2
-  name: 自治体職員向けメール（０号配備）
-smtp_1: &smtp_1
-  target_num: 3
-  name: 自治体職員向けメール（１号配備）
-smtp_2: &smtp_2
-  target_num: 4
-  name: 自治体職員向けメール（２号配備）
-smtp_3: &smtp_3
-  target_num: 5
-  name: 自治体職員向けメール（３号配備）
-smtp_auth: &smtp_auth
-  target_num: 6
-  name: まちcomi向けメール
-twitter: &twitter
-  target_num: 7
-  name: Twitter
-facebook: &facebook
-  target_num: 8
-  name: Facebook
-atom: &atom
-  target_num: 9
-  name: 災害情報ポータル
-urgent_mail_docomo: &urgent_mail_docomo
-  target_num: 10
-  name: 緊急速報メール（NTTDocomo）
-urgent_mail_au: &urgent_mail_au
-  target_num: 11
-  name: 緊急速報メール（KDDI）
-urgent_mail_sb: &urgent_mail_sb
-  target_num: 12
-  name: 緊急速報メール（ソフトバンク）
-
 destination:
   1: # Non member
     1: # 避難勧告指示・指示情報(公共コモンズ配信用)
-      - <<: *commons
-      - <<: *smtp_0
-      - <<: *smtp_1
-      - <<: *smtp_2
-      - <<: *smtp_3
-      - <<: *smtp_auth
-      - <<: *twitter
-      - <<: *facebook
-      - <<: *atom
-      - <<: *urgent_mail_docomo
-      - <<: *urgent_mail_au
-      - <<: *urgent_mail_sb
+      - *commons
+      - *smtp_0
+      - *smtp_1
+      - *smtp_2
+      - *smtp_3
+      - *smtp_auth
+      - *twitter
+      - *facebook
+      - *atom
+      - *urgent_mail_docomo
+      - *urgent_mail_au
+      - *urgent_mail_sb
     4: # JMA（警報・注意報）
-      - <<: *commons
-      - <<: *smtp_0
-      - <<: *smtp_1
-      - <<: *smtp_2
-      - <<: *smtp_3
-      - <<: *smtp_auth
-      - <<: *twitter
-      - <<: *facebook
-      - <<: *atom
-      - <<: *urgent_mail_docomo
-      - <<: *urgent_mail_au
-      - <<: *urgent_mail_sb
+      - *commons
+      - *smtp_0
+      - *smtp_1
+      - *smtp_2
+      - *smtp_3
+      - *smtp_auth
+      - *twitter
+      - *facebook
+      - *atom
+      - *urgent_mail_docomo
+      - *urgent_mail_au
+      - *urgent_mail_sb
   2: # Anonymous
     1: # 避難勧告指示・指示情報(公共コモンズ配信用)
-      - <<: *commons
-      - <<: *smtp_0
-      - <<: *smtp_1
-      - <<: *smtp_2
-      - <<: *smtp_3
-      - <<: *smtp_auth
-      - <<: *twitter
-      - <<: *facebook
-      - <<: *atom
-      - <<: *urgent_mail_docomo
-      - <<: *urgent_mail_au
-      - <<: *urgent_mail_sb
+      - *commons
+      - *smtp_0
+      - *smtp_1
+      - *smtp_2
+      - *smtp_3
+      - *smtp_auth
+      - *twitter
+      - *facebook
+      - *atom
+      - *urgent_mail_docomo
+      - *urgent_mail_au
+      - *urgent_mail_sb
     4: # JMA（警報・注意報）
-      - <<: *commons
-      - <<: *smtp_0
-      - <<: *smtp_1
-      - <<: *smtp_2
-      - <<: *smtp_3
-      - <<: *smtp_auth
-      - <<: *twitter
-      - <<: *facebook
-      - <<: *atom
-      - <<: *urgent_mail_docomo
-      - <<: *urgent_mail_au
-      - <<: *urgent_mail_sb
+      - *commons
+      - *smtp_0
+      - *smtp_1
+      - *smtp_2
+      - *smtp_3
+      - *smtp_auth
+      - *twitter
+      - *facebook
+      - *atom
+      - *urgent_mail_docomo
+      - *urgent_mail_au
+      - *urgent_mail_sb
   3: # 管理者(プロトタイプ環境 admin)
     1: # 避難勧告指示・指示情報(公共コモンズ配信用)
-      - <<: *commons
-      - <<: *smtp_0
-      - <<: *smtp_1
-      - <<: *smtp_2
-      - <<: *smtp_3
-      - <<: *smtp_auth
-      - <<: *twitter
-      - <<: *facebook
-      - <<: *atom
-      - <<: *urgent_mail_docomo
-      - <<: *urgent_mail_au
-      - <<: *urgent_mail_sb
+      - *commons
+      - *smtp_0
+      - *smtp_1
+      - *smtp_2
+      - *smtp_3
+      - *smtp_auth
+      - *twitter
+      - *facebook
+      - *atom
+      - *urgent_mail_docomo
+      - *urgent_mail_au
+      - *urgent_mail_sb
     4: # 気象情報（警報・注意報）
-      - <<: *commons
-      - <<: *smtp_0
-      - <<: *smtp_1
-      - <<: *smtp_2
-      - <<: *smtp_3
-      - <<: *smtp_auth
-      - <<: *twitter
-      - <<: *facebook
-      - <<: *atom
-      - <<: *urgent_mail_docomo
-      - <<: *urgent_mail_au
-      - <<: *urgent_mail_sb
+      - *commons
+      - *smtp_0
+      - *smtp_1
+      - *smtp_2
+      - *smtp_3
+      - *smtp_auth
+      - *twitter
+      - *facebook
+      - *atom
+      - *urgent_mail_docomo
+      - *urgent_mail_au
+      - *urgent_mail_sb
   6: # モデレータ
     1: # 避難勧告指示・指示情報(公共コモンズ配信用)
-      - <<: *commons
-      - <<: *smtp_0
-      - <<: *smtp_1
-      - <<: *smtp_2
-      - <<: *smtp_3
-      - <<: *smtp_auth
-      - <<: *twitter
-      - <<: *facebook
-      - <<: *atom
-      - <<: *urgent_mail_docomo
-      - <<: *urgent_mail_au
-      - <<: *urgent_mail_sb
+      - *commons
+      - *smtp_0
+      - *smtp_1
+      - *smtp_2
+      - *smtp_3
+      - *smtp_auth
+      - *twitter
+      - *facebook
+      - *atom
+      - *urgent_mail_docomo
+      - *urgent_mail_au
+      - *urgent_mail_sb
     4: # JMA（警報・注意報）
-      - <<: *commons
-      - <<: *smtp_0
-      - <<: *smtp_1
-      - <<: *smtp_2
-      - <<: *smtp_3
-      - <<: *smtp_auth
-      - <<: *twitter
-      - <<: *facebook
-      - <<: *atom
-      - <<: *urgent_mail_docomo
-      - <<: *urgent_mail_au
-      - <<: *urgent_mail_sb
+      - *commons
+      - *smtp_0
+      - *smtp_1
+      - *smtp_2
+      - *smtp_3
+      - *smtp_auth
+      - *twitter
+      - *facebook
+      - *atom
+      - *urgent_mail_docomo
+      - *urgent_mail_au
+      - *urgent_mail_sb
   7: # エリアマネージャ
     1: # 避難勧告指示・指示情報(公共コモンズ配信用)
-      - <<: *commons
-      - <<: *smtp_0
-      - <<: *smtp_1
-      - <<: *smtp_2
-      - <<: *smtp_3
-      - <<: *smtp_auth
-      - <<: *twitter
-      - <<: *facebook
-      - <<: *atom
-      - <<: *urgent_mail_docomo
-      - <<: *urgent_mail_au
-      - <<: *urgent_mail_sb
+      - *commons
+      - *smtp_0
+      - *smtp_1
+      - *smtp_2
+      - *smtp_3
+      - *smtp_auth
+      - *twitter
+      - *facebook
+      - *atom
+      - *urgent_mail_docomo
+      - *urgent_mail_au
+      - *urgent_mail_sb
     4: # JMA（警報・注意報）
-      - <<: *commons
-      - <<: *smtp_0
-      - <<: *smtp_1
-      - <<: *smtp_2
-      - <<: *smtp_3
-      - <<: *smtp_auth
-      - <<: *twitter
-      - <<: *facebook
-      - <<: *atom
-      - <<: *urgent_mail_docomo
-      - <<: *urgent_mail_au
-      - <<: *urgent_mail_sb
+      - *commons
+      - *smtp_0
+      - *smtp_1
+      - *smtp_2
+      - *smtp_3
+      - *smtp_auth
+      - *twitter
+      - *facebook
+      - *atom
+      - *urgent_mail_docomo
+      - *urgent_mail_au
+      - *urgent_mail_sb
   8: # 市役所内一般入力者
     1: # 避難勧告指示・指示情報(公共コモンズ配信用)
-      - <<: *commons
-      - <<: *smtp_0
-      - <<: *smtp_1
-      - <<: *smtp_2
-      - <<: *smtp_3
-      - <<: *smtp_auth
-      - <<: *twitter
-      - <<: *facebook
-      - <<: *atom
-      - <<: *urgent_mail_docomo
-      - <<: *urgent_mail_au
-      - <<: *urgent_mail_sb
+      - *commons
+      - *smtp_0
+      - *smtp_1
+      - *smtp_2
+      - *smtp_3
+      - *smtp_auth
+      - *twitter
+      - *facebook
+      - *atom
+      - *urgent_mail_docomo
+      - *urgent_mail_au
+      - *urgent_mail_sb
     4: # JMA（警報・注意報）
-      - <<: *commons
-      - <<: *smtp_0
-      - <<: *smtp_1
-      - <<: *smtp_2
-      - <<: *smtp_3
-      - <<: *smtp_auth
-      - <<: *twitter
-      - <<: *facebook
-      - <<: *atom
-      - <<: *urgent_mail_docomo
-      - <<: *urgent_mail_au
-      - <<: *urgent_mail_sb
+      - *commons
+      - *smtp_0
+      - *smtp_1
+      - *smtp_2
+      - *smtp_3
+      - *smtp_auth
+      - *twitter
+      - *facebook
+      - *atom
+      - *urgent_mail_docomo
+      - *urgent_mail_au
+      - *urgent_mail_sb
   9: # 外部入力者
     1: # 避難勧告指示・指示情報(公共コモンズ配信用)
-      - <<: *commons
-      - <<: *smtp_0
-      - <<: *smtp_1
-      - <<: *smtp_2
-      - <<: *smtp_3
-      - <<: *smtp_auth
-      - <<: *twitter
-      - <<: *facebook
-      - <<: *atom
-      - <<: *urgent_mail_docomo
-      - <<: *urgent_mail_au
-      - <<: *urgent_mail_sb
+      - *commons
+      - *smtp_0
+      - *smtp_1
+      - *smtp_2
+      - *smtp_3
+      - *smtp_auth
+      - *twitter
+      - *facebook
+      - *atom
+      - *urgent_mail_docomo
+      - *urgent_mail_au
+      - *urgent_mail_sb
     4: # JMA（警報・注意報）
-      - <<: *commons
-      - <<: *smtp_0
-      - <<: *smtp_1
-      - <<: *smtp_2
-      - <<: *smtp_3
-      - <<: *smtp_auth
-      - <<: *twitter
-      - <<: *facebook
-      - <<: *atom
-      - <<: *urgent_mail_docomo
-      - <<: *urgent_mail_au
-      - <<: *urgent_mail_sb
+      - *commons
+      - *smtp_0
+      - *smtp_1
+      - *smtp_2
+      - *smtp_3
+      - *smtp_auth
+      - *twitter
+      - *facebook
+      - *atom
+      - *urgent_mail_docomo
+      - *urgent_mail_au
+      - *urgent_mail_sb
   10: # 閲覧者
     1: # 避難勧告指示・指示情報(公共コモンズ配信用)
-      - <<: *commons
-      - <<: *smtp_0
-      - <<: *smtp_1
-      - <<: *smtp_2
-      - <<: *smtp_3
-      - <<: *smtp_auth
-      - <<: *twitter
-      - <<: *facebook
-      - <<: *atom
-      - <<: *urgent_mail_docomo
-      - <<: *urgent_mail_au
-      - <<: *urgent_mail_sb
+      - *commons
+      - *smtp_0
+      - *smtp_1
+      - *smtp_2
+      - *smtp_3
+      - *smtp_auth
+      - *twitter
+      - *facebook
+      - *atom
+      - *urgent_mail_docomo
+      - *urgent_mail_au
+      - *urgent_mail_sb
     4: # JMA（警報・注意報）
-      - <<: *commons
-      - <<: *smtp_0
-      - <<: *smtp_1
-      - <<: *smtp_2
-      - <<: *smtp_3
-      - <<: *smtp_auth
-      - <<: *twitter
-      - <<: *facebook
-      - <<: *atom
-      - <<: *urgent_mail_docomo
-      - <<: *urgent_mail_au
-      - <<: *urgent_mail_sb
-
-delivery_job_map:
-  1: SoapKjCommonsRequestJob
-  2: SmtpJichiShokuinRequestJob
-  3: SmtpJichiShokuinRequestJob
-  4: SmtpJichiShokuinRequestJob
-  5: SmtpJichiShokuinRequestJob
-  6: SmtpAuthRequestJob
-  7: TwitterRequestJob
-  8: FacebookRequestJob
-  9: AtomDigiSignageRequestJob
-  10: SoapKjCommonsRequestJob
-  11: SoapKjCommonsRequestJob
-  12: SoapKjCommonsRequestJob
-
-destination_name:
-  1: 公共情報コモンズ
-  2: 自治体職員向けメール（０号配備）
-  3: 自治体職員向けメール（１号配備）
-  4: 自治体職員向けメール（２号配備）
-  5: 自治体職員向けメール（３号配備）
-  6: まちcomi向けメール
-  7: Twitter
-  8: Facebook
-  9: 災害情報ポータル
-  10: 緊急速報メール（NTTDocomo）
-  11: 緊急速報メール（KDDI）
-  12: 緊急速報メール（ソフトバンク）
-
-create_msg_msd:
-  1: create_commons_msg
-  2: create_smtp_msg
-  3: create_smtp_msg
-  4: create_smtp_msg
-  5: create_smtp_msg
-  6: create_smtp_msg
-  7: create_twitter_msg
-  8: create_facebook_msg
-  9: create_atom_msg
-  10: create_commons_msg
-  11: create_commons_msg
-  12: create_commons_msg
+      - *commons
+      - *smtp_0
+      - *smtp_1
+      - *smtp_2
+      - *smtp_3
+      - *smtp_auth
+      - *twitter
+      - *facebook
+      - *atom
+      - *urgent_mail_docomo
+      - *urgent_mail_au
+      - *urgent_mail_sb
 
 commons_xml:
   0: commons_urgent_mail.xml                     # 緊急速報メール
@@ -478,15 +494,6 @@ disaster_portal_url: http://www.jice.or.jp/sinsai/sinsai_result.php
 
 # LGDSF URL
 lgdsf_url: http://203.138.187.88/lgdsf/staffs/send/
-
-# TODO
-# mailing_list の選択基準未決(手動 & 自動)
-# 職員招集用メーリングリスト
-
-mailing_list:
-  local_government_officer_mail: root@localhost.localdomain
-  machicomi_mail: apl@localhost.localdomain
-                # mamoru@carrot.co.jp
 
 # 外部出力送信失敗時のメール通知パラメーター
 disruption_alert_mailto: apl@localhost.localdomain
