--- a/config/database.yml.example
+++ b/config/database.yml.example
@@ -3,18 +3,18 @@
 # Examples for PostgreSQL and SQLite3 can be found at the end.
 
 production:
-  adapter: mysql
-  database: redmine
+  adapter: postgresql
+  database: LGDIS
   host: localhost
-  username: root
+  username: "railsuser"
   password: ""
   encoding: utf8
 
 development:
-  adapter: mysql
-  database: redmine_development
+  adapter: postgresql
+  database: LGDIS_dev
   host: localhost
-  username: root
+  username: "railsuser"
   password: ""
   encoding: utf8
 
@@ -22,20 +22,9 @@ development:
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
-  adapter: mysql
-  database: redmine_test
+  adapter: postgresql
+  database: LGDIS_test
   host: localhost
-  username: root
+  username: "railsuser"
   password: ""
   encoding: utf8
-
-test_pgsql:
-  adapter: postgresql
-  database: redmine_test
-  host: localhost
-  username: postgres
-  password: "postgres"
-
-test_sqlite3:
-  adapter: sqlite3
-  database: db/test.sqlite3
