--- a/plugins/lgdis/config/api_key.yml
+++ b/plugins/lgdis/config/api_key.yml
@@ -1,9 +1,9 @@
 # Twitter API Key
 twitter:
-  consumer_key: "uAWNoa1MiSowqw7kSd5Mmw"
-  consumer_secret: "mk46iDsPZ3xhJEQpoASCQSVczloQRWqePnA8fpA6R5o"
-  oauth_token: "1025369408-LIWiAKF3aQW0V9TLY38v6J1e4u7jQMzSd7Rr02K"
-  oauth_token_secret: "MRPm38iZZLIKuIh21YTgn96UhtKZJhmC8EFigSiugU"
+  consumer_key: "bf53oh7A7XvTQUZ0fTjF7w"
+  consumer_secret: "Bdn1vI6yZceRZM8rS671au4lpfr6MVaEz9lMfeL7ss"
+  oauth_token: "1206633080-Egzh7YbQPMXHGnki5rAjpAvZ0FD9bfVXdPhOgLV"
+  oauth_token_secret: "kchrHeBiLUKSTwS4ElSGQ7cCKaZWlvxyWTTNj7wchc"
 
 # Facebook API Key
 facebook:
