--- a/.gitignore
+++ b/.gitignore
@@ -14,9 +14,11 @@
 /lib/redmine/scm/adapters/mercurial/redminehelper.pyc
 /lib/redmine/scm/adapters/mercurial/redminehelper.pyo
 /log/*.log*
+/log/ext_out
 /log/mongrel_debug
 /public/dispatch.*
 /public/plugin_assets
+/public/atom
 /public/*.json
 /tmp/*
 /tmp/cache/*
